spade-tests/src/snapshots/spade_tests__ast_lowering__unused_broken_alias_still_errors.snap
---
source: spade-tests/src/ast_lowering.rs
---
use this_is_unknown::a;


error: Use of undeclared name this_is_unknown
  ┌─ testinput:1:5
  │
1 │ use this_is_unknown::a;
  │     ^^^^^^^^^^^^^^^ Undeclared name
